--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-        <header>
+        <header class="bg-dark">
             <div class="collapse" id="navbarToggleExternalContent">
-                <div class="d-flex justify-content-between bg-dark p-4">
+                <div class="container d-flex justify-content-between p-4">
                     <div>
                         <h5 class="text-white fs-3">About</h5>
                         <p class="text-muted fs-5 nav-text">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <nav class="d-flex navbar navbar-dark bg-dark">
+            <nav class="d-flex navbar navbar-dark">
                 <div class="container-fluid container">
                     <h1 class="text-white">
                     <i class="fa-brands fa-instagram"></i>
@@ -46,18 +46,133 @@
                     </button>
                 </div>
             </nav>
-            <div class="hero">
-                <h2 class="fs-1 fw-light ">Album example</h2>
-                <p class="text-muted fs-4">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-                <button class="btn btn-primary fs-4">Main call to action</button>
-                <button class="btn btn-secondary fs-4">Secondary action</button>
-                <div class="bg-dark">~
-                    text
-                </div>
-            </div>
         </header>
+        <main>
+            <section class="hero">
+                <div class="container d-flex justify-content-center flex-wrap">
+                    <h2 class="hero__title fs-1 fw-light mt-5 mb-3">Album example</h2>
+                    <p class="hero__text text-muted text-center fs-4 mb-4">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+                    <button class="btn btn-primary fs-4 me-3">Main call to action</button>
+                    <button class="btn btn-secondary fs-4">Secondary action</button>
+                </div>
+                <div class="container">
+                    <div class="row mt-5 gap-4">
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="row mt-5 gap-4">
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="row mt-5 gap-4">
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="box bg-secondary d-flex align-items-center justify-content-center fs-3 fw-bold text-white">
+                            Thumbnail
+                            </div>
+                            <div class="box border">
+                                <p class="p-3 mb-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <button class="btn btn-outline-secondary ms-3">View</button>
+                                <button class="btn btn-outline-secondary ">Edit</button>
+                                <a href="#">9 mins</a>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+            </section>
+        </main>
 
+        <footer class="mt-5 mb-5">
+            <a href="#" class="link">Album example is © Bootstrap, but please download and customize it for yourself! New to Bootstrap? <span>Visit the homepage</span> or read our <span>getting started guide.</span></a>
 
+        </footer>
 
 
     <!-- link bootstrap js -->
