--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                         <h5 class="text-white fs-3">Contact</h5>
                         <ul class="list-group">
                             <li>
-                                <a href="#" class="link-light fs-5">Follow on Twitter</a>
+                                <a href="#" class="link-light fs-5 nav-link">Follow on Twitter</a>
                             </li>
                             <li>
-                                <a href="#" class="link-light fs-5">Like on Facebook</a>
+                                <a href="#" class="link-light fs-5 nav-link">Like on Facebook</a>
                             </li>
                             <li>
-                                <a href="#" class="link-light fs-5">Email me</a>
+                                <a href="#" class="link-light fs-5 nav-link">Email me</a>
                             </li>
                         </ul>
                     </div>
